buscando a melhor forma de salva utilizando o Filesystem API

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ desired effect
     <script src="public/app/controllers/cadastro.controller.js" type="text/javascript"></script>
 
     <!--Utils-->
-<!--    <script type="text/javascript" src="public/javascripts/valida_campos_select.js"></script>
+    <script type="text/javascript" src="public/javascripts/valida_campos_select.js"></script>
     <script type="text/javascript" src="public/javascripts/preenche_selectors.js"></script>
     <script type="text/javascript" src="public/javascripts/arquivo.js"></script>
     <script type="text/javascript" src="public/javascripts/habilita_input.js"></script>
@@ -255,7 +255,7 @@ desired effect
     <script type="text/javascript" src="public/javascripts/monta_vetor.js"></script>
     <script type="text/javascript" src="public/javascripts/lista_select.js"></script>
     <script type="text/javascript" src="public/javascripts/valida_campos_numero.js"></script>
-    <script type="text/javascript" src="public/javascripts/controller.js"></script>-->
+    <script type="text/javascript" src="public/javascripts/controller.js"></script>
     <!--Renderer for Projects-->
     <script src="./renderer.js"></script>
 </body>
